@@ -61,6 +61,7 @@
 
 <p><table border=1>
 <tr><th>Date</th><th>Title</th><th>Venue</th><th>City</th><th>Country</th></tr
+<tr><td>04/18/19</td><td>Chris Korda & The Church of Euthanasia Archives</td><td>Goswell Road</td><td>Paris</td><td>France</td></tr>
 <tr><td>08/09/18</td><td>PotterDraw</td><td>Gallery Spektrum</td><td>Berlin</td><td>Germany</td></tr>
 <tr><td>03/02/06</td><td>For All Audiences</td><td>Sala Rekalde</td><td>Bilbao</td><td>Spain</td></tr>
 <tr><td>05/20/04</td><td>Atom Krieg</td><td>Kunsthaus Dresden</td><td>Dresden</td><td>Germany</td></tr>
