@@ -3,7 +3,7 @@
 <title>Chris Korda: Press</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="author" content="Chris Korda">
-<meta name="date" content="2021-05-15">
+<meta name="date" content="2021-08-20">
 <meta name="description" content="Chris Korda: Press">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="./style.css" rel=stylesheet title=default type=text/css>
@@ -25,6 +25,7 @@
 <!--  content goes HERE  -->
 <h2>Chris Korda: Press</h2><p>For more detailed press data, see this <a href="https://docs.google.com/spreadsheets/d/1qHem5TOKMZo66Vzlr270AGx9YvRbMGy1cXBzXZ3KQPQ/edit?usp=sharing">spreadsheet</a>.<p><table border=1>
 <tr><th>Date</th><th>Publication</th><th>Title</th><th>Language</th><th>Words</th></tr>
+<tr><td>08/20/21</td><td><a href="https://trommelmusic.com/featured/chris-korda-a-voice-for-the-future/">Trommel</a></td><td><a href="https://trommelmusic.com/featured/chris-korda-a-voice-for-the-future/">Chris Korda: A voice for the future</a></td><td></td><td>&nbsp;</td>
 <tr><td>04/15/21</td><td><a href="https://abonnement.sopress.net/common/product-article/1048">Big Bang</a>, p. 198</td><td><a href="https://abonnement.sopress.net/common/product-article/1048">Suicide g&eacute;n&eacute;ral?</a></td><td>French</td><td>&nbsp;</td>
 <tr><td>03/16/21</td><td><a href="https://www.theransomnote.com/music/articles/apologize-to-the-future-chris-korda-on-the-crisis-facing-our-planet/">Ransom Note</a></td><td><a href="https://www.theransomnote.com/music/articles/apologize-to-the-future-chris-korda-on-the-crisis-facing-our-planet/">'Apologize to the Future': Chris Korda on the crisis facing our planet</a></td><td></td><td>&nbsp;</td>
 <tr><td>03/12/21</td><td><a href="https://www.pagina12.com.ar/328424-la-musica-electronica-esta-muerta">P&aacute;gina 12</a></td><td><a href="http://www.churchofeuthanasia.org/press/pagina12_2.html">&iquest;La m&uacute;sica electr&oacute;nica est&aacute; muerta?</a></td><td>Spanish</td><td>1121</td>
