@@ -39,11 +39,18 @@
 <p><table border=1>
 <tr><th>Title</th><th>Label</th><th>Cat#</th><th>Date</th><th>Format</th></tr>
 <tr>
-<td>Pleasant Mistake</td>
-<td>in production</td>
-<td>TBA</td>
-<td>TBA</td>
-<td>TBA</td>
+<td>More Than Four</td>
+<td>Chapelle XIV</td>
+<td>CHXIV05</td>
+<td>2022</td>
+<td>12" x 2 + Digital</td>
+</tr>
+<tr>
+<td>Passion For Numbers</td>
+<td>Mental Groove</td>
+<td>MG135</td>
+<td>late 2021</td>
+<td>12" + Digital</td>
 </tr>
 <tr>
 <td><a href="https://www.deejay.de/Chris_Korda_and_The_Church_of_Euthanasia_8_Billion_Humans_Cant_Be_Wrong_2x12_MG136_Vinyl__969748">Eight Billion Humans Can't Be Wrong</a></td>
@@ -51,13 +58,6 @@
 <td>MG136</td>
 <td>2021</td>
 <td>12" x 2</td>
-</tr>
-<tr>
-<td>Passion For Numbers</td>
-<td>Mental Groove</td>
-<td>MG135</td>
-<td>2021</td>
-<td>12" + Digital</td>
 </tr>
 <tr>
 <td><a href="https://chriskorda.bandcamp.com/album/apologize-to-the-future">Apologize to the Future</a></td>
@@ -190,18 +190,17 @@
 <th>Country</th>
 </tr>
 <tr>
+<td>10/01/21</td>
+<td>La Station</td>
+<td>Paris</td>
+<td>France</td>
+</tr>
+<tr>
 <td>09/19/21</td>
 <td>Nostromo</td>
 <td>Marolles-sur-Seine</td>
 <td>France</td>
 </tr>
-<tr>
-<td>09/11/21</td>
-<td>Oval Space</td>
-<td>London</td>
-<td>UK</td>
-</tr>
-<tr>
 <td>08/01/21</td>
 <td>Mutek/Centrale 93</td>
 <td>Paris</td>
