@@ -36,7 +36,7 @@
 <tr>
 <td><a href="https://victimofleisure.github.io/Polymeter">Polymeter</a></td>
 <td>MIDI sequencer for music that's in multiple prime meters at once.</td>
-<td>Beta</td>
+<td>Production</td>
 <td><a href="https://polymeter.sourceforge.io/">SourceForge</a></td>
 </tr>
 <tr>
