@@ -23,6 +23,8 @@
 <div id=body>
 <!--  content goes HERE  -->
 
+<p>Read: <a href="https://trommelmusic.com/featured/chris-korda-a-voice-for-the-future/">Chris Korda: A voice for the future</a> in Trommel
+
 <p>See: <a href="https://8billionangels.org/">8 Billion Angels</a>, a film about overpopulation
 
 <p>Buy: <a href="https://abonnement.sopress.net/common/product-article/1048">10-page article on CK & CoE</a> in Big Bang mag
